src/objects/Bot_Intent_Case_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Bot_Intent__c</fullName>
        <label>Bot Intent</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubType2_Key__c</fullName>
        <label>SubType2 Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType_Key__c</fullName>
        <label>SubType Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Key__c</fullName>
        <label>Type Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bot Intent Case Mapping</label>
    <pluralLabel>Bot Intent Case Mappings</pluralLabel>
</CustomObject>